<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
	android:background="@drawable/background" >

    <EditText
        android:id="@+id/editTextNomeCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome_cliente"
        android:inputType="textPersonName" >
    </EditText>

    <EditText
        android:id="@+id/editTextNomeFazenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/nome_fazenda" />

    <EditText
        android:id="@+id/editTextTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/municipio" />

</LinearLayout>
