<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/shape_background"
    android:padding="2dp" >

    	<TextView
    	    android:id="@+id/itemListNomeTalhao"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:background="@drawable/shape_nome_cliente"
    	    android:gravity="center"
    	    android:text="@string/vazio"
    	    android:textAllCaps="true"
    	    android:textColor="#000000"
    	    android:textSize="20sp"
    	    android:textStyle="bold" />

   	<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:background="@drawable/shape_nome_fazenda_municipio"
    android:padding="10sp">

    <TextView
        android:id="@+id/itemListDiasParaAplicacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/itemListImagem"
        android:layout_centerVertical="true"        
        android:text="@string/vazio"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold" />
    
    <ImageView android:id="@+id/itemListImagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descricao_imagem"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_action_forward"
        android:focusableInTouchMode="false"
        android:focusable="false"/>

    <TextView
        android:id="@+id/itemList1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/itemListImagem"
        android:layout_centerVertical="true"
        android:text="@string/proxima_aplicacao"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold" />
    	    
   </RelativeLayout>	    
    	
</LinearLayout>